%%{init: { 'theme':'neutral' } }%%
stateDiagram-v2
    %% Auto-generated by scripts/generate-docs.ts from
    %% src/core/types.ts (SessionStatus) + src/core/state-machine.ts (transitions).

    created
    provisioning
    runner_connecting
    ready
    running
    needs_approval
    review_ready
    creating_pr
    completed
    failed
    aborted
    stalled
    archived

    [*] --> created
    created --> provisioning: POST /sessions
    provisioning --> runner_connecting: sandbox.ready
    runner_connecting --> ready: runner.connected
    ready --> running: agent.started
    running --> needs_approval: approval.requested
    needs_approval --> running: approval.resolved
    running --> review_ready: runner.complete
    review_ready --> creating_pr: POST /create-pr
    creating_pr --> completed: pr.created
    running --> failed: agent.error
    running --> aborted: POST /abort
    completed --> archived: pr.merged
    completed --> [*]
    failed --> [*]
    aborted --> [*]
    archived --> [*]
    running --> stalled: watchdog
    stalled --> running: heartbeat
